cmake_minimum_required(VERSION 3.8)
project(dexhandv2_ros2_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()


# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)

# Set the path to the Dexhand Connect C++ SDK
set(DC_SDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sdk/dexhandv2_cpp_client)

# Add the SDK as a subdirectory
add_subdirectory(${DC_SDK_DIR})

# Add the include directories
include_directories(${DC_SDK_DIR}/include)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
